# Computer_Science_UNSA

./: LICENSE  README.md  randomfile.txt
Algoritmos y Estructuras de Datos/Agente viajero/: main.cpp  nn.hpp  readme.md  salida.txt  util.hpp
Algoritmos y Estructuras de Datos/Proyecto final/: list.hpp
Analisis y Diseño de Algoritmos/Laboratorio 1/: b.txt  b.txtcd  borrar.txt  lab1.cpp  lab1_2.cpp
Analisis y Diseño de Algoritmos/Laboratorio 10/: merge.cpp  mon.py  mon2.py
Analisis y Diseño de Algoritmos/Laboratorio 2/: KaratsubaMultiplication.cpp  KaratsubaMultiplication.h  suma_maxima.cpp
Analisis y Diseño de Algoritmos/Laboratorio 3/: input.txt  insertionsort.cpp  lab3.cpp  merge_insertion.cpp  parcial.cpp  (+2 more)
Big Data/: file_paths.txt  results_n1_p0.5.txt
Bioinformatica/: practica02.py
Computación Gráfica/Laboratorio/GLFW_GLAD_GLUT_GLEW_cmake_project/src/: CMakeLists.txt
Computación Gráfica/Laboratorio/GLFW_GLAD_GLUT_GLEW_cmake_project/src/Hello_Window/: main.cpp
Computación Gráfica/Laboratorio/GLFW_GLAD_GLUT_GLEW_cmake_project/src/Laboratorio_03/: CMakeLists.txt  main.cpp
Computación Gráfica/Laboratorio/GLFW_GLAD_GLUT_GLEW_cmake_project/src/Laboratorio_04_mod/: main.cpp
Computación Gráfica/Laboratorio/GLFW_GLAD_GLUT_GLEW_cmake_project/src/Laboratorio_05/: main.cpp
Computación Gráfica/Laboratorio/GLFW_GLAD_GLUT_GLEW_cmake_project/src/Practica_03/: CMakeLists.txt  projection.c
Computación Gráfica/Laboratorio/GLFW_GLAD_GLUT_GLEW_cmake_project/src/Vitral/: CMakeLists.txt  main.cpp
Ingenieria de Software III/: worldcare.mwb  worldcare.sql
(+428 files in other folders)
